--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
     </p>
 
     <div class="hero-tags">
-      <span class="hero-tag">Сезон 2026 · 5 етапів + Фінал</span>
+      <span class="hero-tag">Сезон 2026 · з Етапів + Фінал</span>
       <span class="hero-tag">Зони A · B · C</span>
       <span class="hero-tag">Live-таблиці та рейтинг онлайн</span>
     </div>
@@ -443,7 +443,7 @@
         Переглянути регламент
       </a>
       <a class="btn btn--accent btn-lg" href="register.html">
-        Подати заявку
+        Змагання
       </a>
       <a class="btn btn--danger btn-lg" href="live.html">
         Live протоколи
@@ -477,7 +477,7 @@
       <li>• Початківці та аматори, які хочуть пройти свій перший турнір</li>
       <li>• Досвідчені рибалки та спортивні команди</li>
       <li>• Риболовні клуби та спільноти</li>
-      <li>• Ті, хто готовий пройти сезон із 5 етапів та гранд-фіналом</li>
+      <li>• Ті, хто готовий пройти сезон із етапів та гранд-фіналом</li>
     </ul>
   </section>
 
@@ -492,7 +492,7 @@
     </p>
 
     <div class="mission-cards">
-      <div class="mission-card">✅ Чесні та зрозумілі правила</div>
+      <div class="mission-card">✅ Інноваційна система відкритого Зважування</div>
       <div class="mission-card">📊 Сучасний формат та live-таблиці</div>
       <div class="mission-card">🤝 бережне ставлення до риби та природи</div>
       <div class="mission-card">🎣 популяризації спортивного карпфішингу</div>
@@ -502,13 +502,12 @@
   <section class="section container info-block">
     <h2 class="section-title">Структура сезону</h2>
     <p class="info-text">
-      Сезон STOLAR CARP складається з 5 рейтингових етапів. 
+      Сезон STOLAR CARP складається з рейтингових етапів. 
       Команди набирають бали на кожному з них, а за підсумком сезону найкращі потрапляють 
-      у Великий Фінал, де і визначається Чемпіон.
+      у Великий Фінал, де і визначається Чемпіон сезону.
     </p>
 
     <ul class="stage-list">
-      <li>Етап 1 • Етап 2 • Етап 3 • Етап 4 • Етап 5</li>
       <li class="final-highlight">Фінал — битва найкращих команд за титул Чемпіона сезону STOLAR CARP</li>
     </ul>
   </section>
@@ -522,8 +521,8 @@
 
     <div class="lake-cards">
       <div class="lake-card">Лелехівка</div>
-      <div class="lake-card">Пристань</div>
-      <div class="lake-card">Bounty</div>
+      <div class="lake-card">...</div>
+      <div class="lake-card">...</div>
     </div>
 
     <a href="lakes.html" class="btn btn--primary" style="margin-top:20px;">
@@ -537,7 +536,7 @@
     </h2>
 
     <ul class="advantages-list">
-      <li>Незалежне суддівство та чіткий регламент</li>
+      <li>Незалежне суддівство та інноваційний цифровий контроль.</li>
       <li>Онлайн-результати 24/7: live-протоколи та рейтинг команд</li>
       <li>Жеребкування секторів у відкритому форматі</li>
       <li>Big Fish, окремі номінації та фінальний кубок</li>
