--- a/live.html
+++ b/live.html
@@ -5,182 +5,128 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Live результати — STOLAR CARP</title>
 
-  <!-- Favicon & App Icon -->
-  <link rel="icon" type="image/png" href="assets/favicon.png">
-  <link rel="apple-touch-icon" href="assets/favicon.png">
-  <meta name="theme-color" content="#1a1a1a">
-
-  <!-- Стилі та скрипт меню -->
   <link rel="stylesheet" href="assets/css/main.css">
   <script defer src="assets/js/config.js"></script>
 
-  <!-- Локальні стилі тільки для live-сторінки -->
   <style>
-    .live-header {
-      display:flex;
-      flex-direction:column;
-      gap:6px;
-      margin-bottom:18px;
-    }
-    .live-kicker{
-      display:inline-flex;
-      align-items:center;
-      gap:6px;
-      font-size:12px;
-      text-transform:uppercase;
-      letter-spacing:.12em;
-      color:#fcd34d;
-      background:rgba(252,211,77,0.08);
-      border-radius:999px;
-      padding:4px 10px;
-      border:1px solid rgba(252,211,77,0.35);
-      width:fit-content;
-    }
-    .live-kicker span.live-dot{
-      width:8px;height:8px;border-radius:50%;
-      background:#ef4444;
-      box-shadow:0 0 10px rgba(239,68,68,0.9);
-    }
-    .live-stage-pill{
-      display:inline-flex;
-      align-items:center;
-      gap:8px;
-      font-size:13px;
-      color:var(--muted);
-    }
-    .live-stage-pill span{
-      padding:4px 10px;
-      border-radius:999px;
-      border:1px solid #262636;
-      background:#0d0d14;
-      font-size:12px;
+    .live-header{display:flex;flex-direction:column;gap:6px;margin-bottom:18px;}
+    .live-kicker{display:inline-flex;align-items:center;gap:6px;font-size:12px;text-transform:uppercase;letter-spacing:.12em;color:#fcd34d;background:rgba(252,211,77,.08);border-radius:999px;padding:4px 10px;border:1px solid rgba(252,211,77,.35);width:fit-content;}
+    .live-dot{width:8px;height:8px;border-radius:50%;background:#ef4444;box-shadow:0 0 10px rgba(239,68,68,.9);}
+    .title-gradient{background:linear-gradient(90deg,#f6c34c 0%,#cc6a2b 35%,#7a0f2b 100%);-webkit-background-clip:text;background-clip:text;color:transparent;}
+    .live-stage-pill{display:inline-flex;align-items:center;gap:8px;font-size:13px;color:var(--muted);}
+    .live-stage-pill span{padding:4px 10px;border-radius:999px;border:1px solid #262636;background:#0d0d14;font-size:12px;}
+
+    .live-layout{display:grid;grid-template-columns:1fr;gap:18px;}
+    @media (min-width: 980px){
+      .live-layout{grid-template-columns: 2fr 1.25fr;}
     }
 
-    .title-gradient{
-      background:linear-gradient(90deg,#f6c34c 0%,#cc6a2b 35%,#7a0f2b 100%);
-      -webkit-background-clip:text;
-      background-clip:text;
-      color:transparent;
+    .live-zones-grid{display:grid;grid-template-columns:repeat(3,1fr);gap:12px;}
+    @media (max-width: 980px){ .live-zones-grid{grid-template-columns:1fr;} }
+
+    .live-zone-title{display:flex;align-items:center;justify-content:space-between;margin-bottom:6px;}
+    .live-zone-title span.badge{font-size:11px;padding:3px 8px;}
+
+    .table-sm{font-size:12.5px;}
+    .table-sm th,.table-sm td{padding:6px 8px;white-space:nowrap;}
+    .table-sm td.team-col{max-width:220px;white-space:normal;}
+    .live-note{font-size:12px;color:var(--muted);margin-top:6px;}
+
+    .bf-toggle{display:flex;gap:10px;align-items:center;flex-wrap:wrap;margin-top:10px;}
+    .bf-toggle .btn{padding:10px 12px;border-radius:12px;}
+
+    /* BigFish Total block hide/show */
+    .bf-wrap{display:none;}
+    .bf-wrap.is-open{display:block;}
+
+    /* Small helper badge */
+    .pill{
+      display:inline-flex;align-items:center;gap:8px;
+      padding:6px 10px;border-radius:999px;
+      border:1px solid rgba(148,163,184,.25);
+      background:rgba(2,6,23,.35);
+      color:#cbd5e1;font-size:12px;
     }
 
-    .live-layout{
-      display:grid;
-      grid-template-columns:2fr 1.2fr;
-      gap:18px;
-    }
-    @media (max-width:900px){
-      .live-layout{
-        grid-template-columns:1fr;
-      }
-    }
-
-    .live-zones-grid{
-      display:grid;
-      grid-template-columns:repeat(3,1fr);
-      gap:12px;
-    }
-    @media (max-width:900px){
-      .live-zones-grid{
-        grid-template-columns:1fr;
-      }
-    }
-
-    .live-zone-title{
-      display:flex;
-      align-items:center;
-      justify-content:space-between;
-      margin-bottom:6px;
-    }
-    .live-zone-title span.badge{
-      font-size:11px;
-      padding:3px 8px;
-    }
-
-    .table-sm{
-      font-size:13px;
-    }
-    .table-sm th,
-    .table-sm td{
-      padding:6px 8px;
-      white-space:nowrap;
-    }
-    .table-sm td.team-col{
-      max-width:180px;
-      white-space:normal;
-    }
-
-    .live-note{
-      font-size:12px;
-      color:var(--muted);
-      margin-top:6px;
-    }
-
-    .bigfish-row--max{
-      background:rgba(250,204,21,0.08);
-    }
+    .bigfish-row--max{background:rgba(250,204,21,0.08);}
   </style>
 </head>
+
 <body>
 
-<!-- HEADER -->
 <header class="header">
   <div class="container header__row">
     <a class="logo" href="index.html">
       <span class="logo__mark">SC</span>
       <span class="logo__text">STOLAR CARP</span>
     </a>
+
     <nav class="nav" id="nav">
-  <a href="/index.html" class="nav__link">Головна</a>
-  <a href="/rules.html" class="nav__link">Регламент</a>
-  <a href="/register.html" class="nav__link">Реєстрація</a>
-  <a href="/live.html" class="nav__link">Live</a>
-  <a href="/rating.html" class="nav__link">Рейтинг</a>
-  <a href="/lakes.html" class="nav__link">Водойми</a>
-  <a href="/sponsors.html" class="nav__link">Спонсори</a>
-  <a href="/events/index.html" class="nav__link">Архів</a>
-  <a href="/cabinet.html" class="nav__link">Мій кабінет</a>
-</nav>
+      <a href="/index.html" class="nav__link">Головна</a>
+      <a href="/rules.html" class="nav__link">Регламент</a>
+      <a href="/register.html" class="nav__link">Реєстрація</a>
+      <a href="/live.html" class="nav__link">Live</a>
+      <a href="/rating.html" class="nav__link">Рейтинг</a>
+      <a href="/lakes.html" class="nav__link">Водойми</a>
+      <a href="/sponsors.html" class="nav__link">Спонсори</a>
+      <a href="/events/index.html" class="nav__link">Архів</a>
+      <a href="/cabinet.html" class="nav__link">Мій кабінет</a>
+    </nav>
+
     <button class="burger" id="burger"><span></span><span></span><span></span></button>
   </div>
 </header>
 
-<!-- MAIN -->
 <main class="main">
   <section class="container section">
+
     <div class="live-header">
       <div class="live-kicker">
         <span class="live-dot"></span>
         <span>Live протокол</span>
       </div>
+
       <h1 class="title-gradient" style="margin:4px 0 4px;font-size:clamp(26px,4.5vw,34px);">
         Результати активного етапу
       </h1>
+
       <div class="live-stage-pill">
-        <span>Поточний етап: <strong id="liveStageName">...</strong></span>
+        <span>Поточний етап: <strong id="liveStageName">—</strong></span>
       </div>
-      <p class="lead" style="max-width:640px;margin:4px 0 0;">
-        Дані оновлюються з Google-таблиці. Підсумки формуються автоматично по зонах A/B/C, 
-        загальній вазі та Big Fish.
+
+      <div class="bf-toggle">
+        <button class="btn btn--accent" id="toggleBigFishBtn" type="button">BigFish Total</button>
+        <span class="pill" id="liveUpdatedAt" title="Останнє оновлення">Оновлено: —</span>
+      </div>
+
+      <p class="lead" style="max-width:720px;margin:6px 0 0;">
+        W = <b>к-сть / вага</b>. Таблиці оновлюються автоматично з Firebase.
       </p>
     </div>
 
     <div id="liveError" class="form-msg err" style="display:none;"></div>
 
+    <div id="liveLoading" class="form__hint" style="margin-top:12px;">
+      Завантаження результатів...
+    </div>
+
     <div id="liveContent" class="live-layout" style="display:none;">
-      <!-- Ліва колонка: зони + загальний протокол -->
+
+      <!-- LEFT -->
       <div class="live-left">
         <div class="card" style="margin-bottom:16px;">
           <h2 style="margin-top:0;margin-bottom:10px;">Зони A / B / C</h2>
-          <div class="live-zones-grid" id="zonesContainer">
-            <!-- JS вставить 3 картки зон -->
-          </div>
+
+          <div class="live-zones-grid" id="zonesContainer"></div>
+
           <p class="live-note">
-            Сортування по вазі, при рівній вазі — за найбільшою рибою (BIG).
+            Сортування: вага → BIG. Місце — в межах зони.
           </p>
         </div>
 
         <div class="card">
           <h2 style="margin-top:0;margin-bottom:10px;">Загальна таблиця</h2>
+
           <div class="table-wrap" style="overflow-x:auto;">
             <table class="table table-sm" id="totalTable">
               <thead>
@@ -188,24 +134,33 @@
                   <th>№</th>
                   <th>Команда</th>
                   <th>Зона</th>
-                  <th>К-сть</th>
+                  <th>W1</th>
+                  <th>W2</th>
+                  <th>W3</th>
+                  <th>W4</th>
+                  <th>Разом</th>
                   <th>BIG</th>
-                  <th>Вага</th>
                 </tr>
               </thead>
-              <tbody>
-                <!-- JS -->
-              </tbody>
+              <tbody></tbody>
             </table>
           </div>
+
+          <p class="live-note">
+            W = к-сть / вага. Місце — загальне (якщо записане), інакше “—”.
+          </p>
         </div>
       </div>
 
-      <!-- Права колонка: Big Fish Total -->
+      <!-- RIGHT: BigFish Total -->
       <div class="live-right">
-        <div class="card">
-          <h2 style="margin-top:0;margin-bottom:10px;">Big Fish — Total</h2>
-          <div class="table-wrap" style="overflow-x:auto;">
+        <div class="card bf-wrap" id="bigFishWrap">
+          <div style="display:flex;align-items:center;justify-content:space-between;gap:10px;flex-wrap:wrap;">
+            <h2 style="margin:0;">BigFish — Total</h2>
+            <span class="pill" id="bfCount">Учасників: —</span>
+          </div>
+
+          <div class="table-wrap" style="overflow-x:auto;margin-top:10px;">
             <table class="table table-sm" id="bigFishTable">
               <thead>
                 <tr>
@@ -215,25 +170,20 @@
                   <th>MAX BIG</th>
                 </tr>
               </thead>
-              <tbody>
-                <!-- JS -->
-              </tbody>
+              <tbody></tbody>
             </table>
           </div>
+
           <p class="live-note">
-            Big Fish етапу.
+            Учасники беруться з адмінки жеребкування (галочка BigFish Total).
           </p>
         </div>
       </div>
-    </div>
 
-    <div id="liveLoading" class="form__hint" style="margin-top:12px;">
-      Завантаження результатів...
     </div>
   </section>
 </main>
 
-<!-- FOOTER -->
 <footer class="footer">
   <div class="container footer__row">
     <div>© 2025 STOLAR CARP · Львів</div>
@@ -244,144 +194,29 @@
   </div>
 </footer>
 
-<!-- СКРИПТ LIVE-ПІДТЯГУВАННЯ -->
+<!-- Firebase compat -->
+<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
+<script src="assets/js/firebase-init.js"></script>
+
+<!-- Live читання -->
+<script src="assets/js/live_firebase.js"></script>
+
+<!-- BigFish Total -->
+<script src="assets/js/bigfish_total_live.js"></script>
+
 <script>
-document.addEventListener('DOMContentLoaded', () => {
-  // ВАЖЛИВО: та сама веб-адреса, що й у register.html
-  const apiUrl = 'https://script.google.com/macros/s/AKfycbyyBGjueNe074tk2QXmt2QTShhW00vzrFVOsw4UB4sgQ1eMHWKCsjCr6Z4NtwQdiSaG/exec?action=live';
+  // toggle BigFish Total panel
+  (function(){
+    const btn = document.getElementById("toggleBigFishBtn");
+    const wrap = document.getElementById("bigFishWrap");
+    if (!btn || !wrap) return;
 
-  const stageEl    = document.getElementById('liveStageName');
-  const zonesWrap  = document.getElementById('zonesContainer');
-  const totalTbody = document.querySelector('#totalTable tbody');
-  const bigFishTbody = document.querySelector('#bigFishTable tbody');
-  const loadingEl  = document.getElementById('liveLoading');
-  const contentEl  = document.getElementById('liveContent');
-  const errorEl    = document.getElementById('liveError');
-
-  const fmt = (v) => {
-    if (v === null || v === undefined || v === '') return '-';
-    return String(v);
-  };
-
-  const renderZones = (zones) => {
-    const zoneNames = ['A','B','C'];
-    zonesWrap.innerHTML = zoneNames.map(z => {
-      const list = zones[z] || [];
-      if (!list.length){
-        return `
-          <div class="live-zone card">
-            <div class="live-zone-title">
-              <h3 style="margin:0;">Зона ${z}</h3>
-              <span class="badge">немає даних</span>
-            </div>
-            <p class="form__hint">Результати для цієї зони ще не заповнені.</p>
-          </div>
-        `;
-      }
-
-      const rowsHtml = list.map(row => `
-        <tr>
-          <td>${fmt(row.place)}</td>
-          <td class="team-col">${fmt(row.team)}</td>
-          <td>${fmt(row.count)}</td>
-          <td>${fmt(row.big)}</td>
-          <td>${fmt(row.weight)}</td>
-        </tr>
-      `).join('');
-
-      return `
-        <div class="live-zone card">
-          <div class="live-zone-title">
-            <h3 style="margin:0;">Зона ${z}</h3>
-            <span class="badge badge--warn">команд: ${list.length}</span>
-          </div>
-          <div class="table-wrap" style="overflow-x:auto;">
-            <table class="table table-sm">
-              <thead>
-                <tr>
-                  <th>№</th>
-                  <th>Команда</th>
-                  <th>К-сть</th>
-                  <th>BIG</th>
-                  <th>Вага</th>
-                </tr>
-              </thead>
-              <tbody>
-                ${rowsHtml}
-              </tbody>
-            </table>
-          </div>
-        </div>
-      `;
-    }).join('');
-  };
-
-  const renderTotal = (total) => {
-    if (!total || !total.length){
-      totalTbody.innerHTML = '<tr><td colspan="6">Дані ще не заповнені.</td></tr>';
-      return;
-    }
-
-    totalTbody.innerHTML = total.map(row => `
-      <tr>
-        <td>${fmt(row.place)}</td>
-        <td class="team-col">${fmt(row.team)}</td>
-        <td>${fmt(row.zone)}</td>
-        <td>${fmt(row.count)}</td>
-        <td>${fmt(row.big)}</td>
-        <td>${fmt(row.weight)}</td>
-      </tr>
-    `).join('');
-  };
-
-  const renderBigFish = (list) => {
-    if (!list || !list.length){
-      bigFishTbody.innerHTML = '<tr><td colspan="4">Поки що немає зафіксованих результатів Big Fish.</td></tr>';
-      return;
-    }
-
-    bigFishTbody.innerHTML = list.map(row => `
-      <tr class="${row.isMax ? 'bigfish-row--max' : ''}">
-        <td>${fmt(row.team)}</td>
-        <td>${fmt(row.big1Day)}</td>
-        <td>${fmt(row.big2Day)}</td>
-        <td><strong>${fmt(row.teamMaxBig)}</strong>${row.isMax ? ' 🏆' : ''}</td>
-      </tr>
-    `).join('');
-  };
-
-  const loadLive = async () => {
-    try {
-      const res = await fetch(apiUrl);
-      const json = await res.json();
-      console.log('LIVE JSON:', json);
-
-      if (json && json.stage) {
-        stageEl.textContent = json.stage;
-      } else {
-        stageEl.textContent = '—';
-      }
-
-      const data = json && json.data ? json.data : { zones:{A:[],B:[],C:[]}, total:[], bigFishTotal:[] };
-
-      renderZones(data.zones || {A:[],B:[],C:[]});
-      renderTotal(data.total || []);
-      renderBigFish(data.bigFishTotal || []);
-
-      if (loadingEl) loadingEl.style.display = 'none';
-      if (contentEl) contentEl.style.display = 'grid';
-    } catch (err) {
-      console.error('Live fetch error:', err);
-      if (errorEl){
-        errorEl.style.display = 'block';
-        errorEl.textContent = '❌ Не вдалося завантажити live-дані. Перевірте веб-скрипт або спробуйте пізніше.';
-      }
-      if (loadingEl) loadingEl.style.display = 'none';
-    }
-  };
-
-  loadLive();
-});
+    btn.addEventListener("click", () => {
+      wrap.classList.toggle("is-open");
+    });
+  })();
 </script>
 
 </body>
