--- a/live.html
+++ b/live.html
@@ -147,7 +147,7 @@
           </div>
 
           <p class="live-note">
-            W = к-сть / вага. Місце — загальне (якщо записане), інакше “—”.
+            W = к-сть / вага (шт / кг). Місце — загальне (якщо записане), інакше “—”.
           </p>
         </div>
       </div>
@@ -205,19 +205,6 @@
 
 <!-- BigFish Total -->
 <script src="assets/js/bigfish_total_live.js"></script>
-
-<script>
-  // toggle BigFish Total panel
-  (function(){
-    const btn = document.getElementById("toggleBigFishBtn");
-    const wrap = document.getElementById("bigFishWrap");
-    if (!btn || !wrap) return;
-
-    btn.addEventListener("click", () => {
-      wrap.classList.toggle("is-open");
-    });
-  })();
-</script>
 
 </body>
 </html>
