--- a/live.html
+++ b/live.html
@@ -87,11 +87,11 @@
       </div>
 
       <h1 class="title-gradient" style="margin:4px 0 4px;font-size:clamp(26px,4.5vw,34px);">
-        Результати активного етапу
+        Результати активних змагань
       </h1>
 
       <div class="live-stage-pill">
-        <span>Поточний етап: <strong id="liveStageName">—</strong></span>
+        <span>Активні: <strong id="liveStageName">—</strong></span>
       </div>
 
       <div class="bf-toggle">
