--- a/live.html
+++ b/live.html
@@ -100,8 +100,7 @@
       </div>
 
       <p class="lead" style="max-width:720px;margin:6px 0 0;">
-        W = <b>к-сть / вага</b>. Таблиці оновлюються автоматично з Firebase.
-      </p>
+        W = <b>к-сть / вага</b>
     </div>
 
     <div id="liveError" class="form-msg err" style="display:none;"></div>
@@ -120,13 +119,13 @@
           <div class="live-zones-grid" id="zonesContainer"></div>
 
           <p class="live-note">
-            Сортування: вага → BIG. Місце — в межах зони.
+            STOLAR CARP
           </p>
         </div>
 
         <div class="card">
   <div style="display:flex;align-items:center;justify-content:space-between;gap:10px;flex-wrap:wrap;">
-    <h2 style="margin:0;">Зважування по етапу</h2>
+    <h2 style="margin:0;">Зважування</h2>
 
     <div class="bf-toggle" id="wFilter">
       <button type="button" class="btn btn--accent btn--xs" data-w-key="W1">W1</button>
@@ -151,12 +150,12 @@
   </div>
 
   <p class="live-note">
-    Обери W1–W4, щоб подивитися відповідне зважування. № = номер сектору.
+    Переглянути зважування W1–W4,
   </p>
         </div>
 
           <p class="live-note">
-            W = к-сть / вага (шт / кг). Місце — загальне (якщо записане), інакше “—”.
+            W = к-сть / вага (шт / кг).
           </p>
         </div>
       </div>
@@ -184,7 +183,7 @@
           </div>
 
           <p class="live-note">
-            Учасники беруться з адмінки жеребкування (галочка BigFish Total).
+            STOLAR CARP
           </p>
         </div>
       </div>
