--- a/live.html
+++ b/live.html
@@ -139,10 +139,10 @@
     <table class="table table-sm" id="weighTable">
       <thead>
         <tr>
-          <th>№ (сектор)</th>
+          <th>№</th>
           <th>Команда</th>
           <th>Зона</th>
-          <th>W (шт / кг)</th>
+          <th>W</th>
         </tr>
       </thead>
       <tbody></tbody>
@@ -155,7 +155,7 @@
         </div>
 
           <p class="live-note">
-            W = к-сть / вага (шт / кг).
+            W = к-сть / вага .
           </p>
         </div>
       </div>
