--- a/live.html
+++ b/live.html
@@ -17,63 +17,26 @@
     .live-stage-pill span{padding:4px 10px;border-radius:999px;border:1px solid #262636;background:#0d0d14;font-size:12px;}
 
     .live-layout{display:grid;grid-template-columns:1fr;gap:18px;}
-    @media (min-width: 980px){
-      .live-layout{grid-template-columns: 2fr 1.25fr;}
-    }
+    @media (min-width:980px){.live-layout{grid-template-columns:2fr 1.25fr;}}
 
     .live-zones-grid{display:grid;grid-template-columns:repeat(3,1fr);gap:12px;}
-    @media (max-width: 980px){ .live-zones-grid{grid-template-columns:1fr;} }
+    @media (max-width:980px){.live-zones-grid{grid-template-columns:1fr;}}
 
     .live-zone-title{display:flex;align-items:center;justify-content:space-between;margin-bottom:6px;}
     .live-zone-title span.badge{font-size:11px;padding:3px 8px;}
 
-    /* більш компактні таблиці */
     .table-sm{font-size:11.5px;line-height:1.2;}
-    .table-sm th,
-    .table-sm td{
-      padding:4px 6px;
-      white-space:nowrap;
-    }
-    .table-sm td.team-col{
-      max-width:180px;
-      white-space:normal;
-    }
+    .table-sm th,.table-sm td{padding:4px 6px;white-space:nowrap;}
+    .table-sm td.team-col{max-width:170px;white-space:normal;}
 
-    .live-note{font-size:11.5px;color:var(--muted);margin-top:6px;}
+    .live-note{font-size:11px;color:var(--muted);margin-top:6px;}
 
     .bf-toggle{display:flex;gap:10px;align-items:center;flex-wrap:wrap;margin-top:10px;}
     .bf-toggle .btn{padding:8px 11px;border-radius:12px;font-size:13px;}
 
-    /* блок BigFish Total: ховаємо/показуємо класом is-open (робить скрипт bigfish_total_live.js) */
-    .bf-wrap{display:none;}
+    /* BigFish Total */
+    .bf-wrap{display:none;margin-top:15px;}
     .bf-wrap.is-open{display:block;}
-
-          <!-- RIGHT: BigFish Total -->
-      <div class="live-right">
-        <div class="card bf-wrap" id="bigFishWrap">
-          <div style="display:flex;align-items:center;justify-content:space-between;gap:10px;flex-wrap:wrap;">
-            <h2 style="margin:0;">BigFish — Total</h2>
-            <span class="pill" id="bfCount">Учасників: —</span>
-          </div>
-
-          <div class="table-wrap" style="overflow-x:auto;margin-top:10px;">
-            <table class="table table-sm" id="bigFishTable">
-              <thead>
-                <tr>
-                  <th>Команда</th>
-                  <th>BIG 1 доба</th>
-                  <th>BIG 2 доба</th>
-                  <th>MAX BIG</th>
-                </tr>
-              </thead>
-              <tbody></tbody>
-            </table>
-          </div>
-
-          <p class="live-note">
-            Учасники беруться з адмінки жеребкування (галочка BigFish Total).
-          </p>
-        </div>
 
     .pill{
       display:inline-flex;align-items:center;gap:8px;
@@ -82,7 +45,6 @@
       background:rgba(2,6,23,.35);
       color:#cbd5e1;font-size:12px;
     }
-
     .bigfish-row--max{background:rgba(250,204,21,0.08);}
   </style>
 </head>
@@ -121,9 +83,7 @@
         <span>Live протокол</span>
       </div>
 
-      <h1 class="title-gradient" style="margin:4px 0 4px;font-size:clamp(26px,4.5vw,34px);">
-        Результати активного етапу
-      </h1>
+      <h1 class="title-gradient">Результати активного етапу</h1>
 
       <div class="live-stage-pill">
         <span>Поточний етап: <strong id="liveStageName">—</strong></span>
@@ -131,36 +91,55 @@
 
       <div class="bf-toggle">
         <button class="btn btn--accent" id="toggleBigFishBtn" type="button">BigFish Total</button>
-        <span class="pill" id="liveUpdatedAt" title="Останнє оновлення">Оновлено: —</span>
+        <span class="pill" id="liveUpdatedAt">Оновлено: —</span>
       </div>
 
-      <p class="lead" style="max-width:720px;margin:6px 0 0;">
-        W = <b>к-сть / вага</b>. Таблиці оновлюються автоматично з Firebase.
+      <!-- BigFish Total під кнопкою -->
+      <div class="card bf-wrap" id="bigFishWrap">
+        <div style="display:flex;align-items:center;justify-content:space-between;gap:10px;flex-wrap:wrap;">
+          <h2 style="margin:0;">BigFish — Total</h2>
+          <span class="pill" id="bfCount">Учасників: —</span>
+        </div>
+
+        <div class="table-wrap" style="overflow-x:auto;margin-top:10px;">
+          <table class="table table-sm" id="bigFishTable">
+            <thead>
+              <tr>
+                <th>Команда</th>
+                <th>BIG 1 доба</th>
+                <th>BIG 2 доба</th>
+                <th>MAX BIG</th>
+              </tr>
+            </thead>
+            <tbody></tbody>
+          </table>
+        </div>
+
+        <p class="live-note">Учасники беруться з адмінки жеребкування.</p>
+      </div>
+
+      <p class="lead" style="max-width:720px;margin-top:10px;">
+        W = <b>к-сть / вага</b>. Дані оновлюються автоматично з Firebase.
       </p>
     </div>
 
     <div id="liveError" class="form-msg err" style="display:none;"></div>
-
-    <div id="liveLoading" class="form__hint" style="margin-top:12px;">
-      Завантаження результатів...
-    </div>
+    <div id="liveLoading" class="form__hint" style="margin-top:12px;">Завантаження...</div>
 
     <div id="liveContent" class="live-layout" style="display:none;">
 
-      <!-- LEFT -->
+      <!-- LEFT SIDE -->
       <div class="live-left">
         <div class="card" style="margin-bottom:16px;">
-          <h2 style="margin-top:0;margin-bottom:10px;">Зони A / B / C</h2>
+          <h2 style="margin-top:0;">Зони A / B / C</h2>
 
           <div class="live-zones-grid" id="zonesContainer"></div>
 
-          <p class="live-note">
-            Сортування: вага → BIG. Місце — в межах зони.
-          </p>
+          <p class="live-note">Місця у зоні.</p>
         </div>
 
         <div class="card">
-          <h2 style="margin-top:0;margin-bottom:10px;">Загальна таблиця</h2>
+          <h2 style="margin-top:0;">Загальна таблиця</h2>
 
           <div class="table-wrap" style="overflow-x:auto;">
             <table class="table table-sm" id="totalTable">
@@ -168,7 +147,11 @@
                 <tr>
                   <th>Зона</th>
                   <th>Команда</th>
-                  <th>К-сть риб</th>
+                  <th>W1</th>
+                  <th>W2</th>
+                  <th>W3</th>
+                  <th>W4</th>
+                  <th>Разом</th>
                   <th>BIG</th>
                   <th>Вага</th>
                   <th>Місце</th>
@@ -178,12 +161,12 @@
             </table>
           </div>
 
-          <p class="live-note">
-            К-сть риб — загальна по етапу. Місце — загальне (якщо записане), інакше “—”.
-          </p>
+          <p class="live-note">W1–W4 — зважування. Разом — всі риби та вага.</p>
+        </div>
       </div>
 
     </div>
+
   </section>
 </main>
 
@@ -192,22 +175,25 @@
     <div>© 2025 STOLAR CARP · Львів</div>
     <div class="footer__links">
       <a href="https://invite.viber.com/?g=8R04gUEhdVSnX6sr_DxGGGqAXTus0Ygh">Viber</a>
-      <a href="https://youtube.com/@dk-stolarcarp?si=H-BUK2msCiKXdcA9">YouTube</a>
+      <a href="https://youtube.com/@dk-stolarcarp">YouTube</a>
     </div>
   </div>
 </footer>
 
-<!-- Firebase compat -->
+<!-- Firebase -->
 <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
+
 <script src="assets/js/firebase-init.js"></script>
-
-<!-- Live читання -->
 <script src="assets/js/live_firebase.js"></script>
-
-<!-- BigFish Total -->
 <script src="assets/js/bigfish_total_live.js"></script>
+
+<script>
+  document.getElementById("toggleBigFishBtn")?.addEventListener("click", () => {
+    document.getElementById("bigFishWrap")?.classList.toggle("is-open");
+  });
+</script>
 
 </body>
 </html>
