--- a/live.html
+++ b/live.html
@@ -9,43 +9,223 @@
   <script defer src="assets/js/config.js"></script>
 
   <style>
-    .live-header{display:flex;flex-direction:column;gap:6px;margin-bottom:18px;}
-    .live-kicker{display:inline-flex;align-items:center;gap:6px;font-size:12px;text-transform:uppercase;letter-spacing:.12em;color:#fcd34d;background:rgba(252,211,77,.08);border-radius:999px;padding:4px 10px;border:1px solid rgba(252,211,77,.35);width:fit-content;}
-    .live-dot{width:8px;height:8px;border-radius:50%;background:#ef4444;box-shadow:0 0 10px rgba(239,68,68,.9);}
-    .title-gradient{background:linear-gradient(90deg,#f6c34c 0%,#cc6a2b 35%,#7a0f2b 100%);-webkit-background-clip:text;background-clip:text;color:transparent;}
-    .live-stage-pill{display:inline-flex;align-items:center;gap:8px;font-size:13px;color:var(--muted);}
-    .live-stage-pill span{padding:4px 10px;border-radius:999px;border:1px solid #262636;background:#0d0d14;font-size:12px;}
+  /* ===== Верхній блок ===== */
+  .live-header{
+    display:flex;
+    flex-direction:column;
+    gap:6px;
+    margin-bottom:18px;
+  }
+  .live-kicker{
+    display:inline-flex;
+    align-items:center;
+    gap:6px;
+    font-size:12px;
+    text-transform:uppercase;
+    letter-spacing:.12em;
+    color:#fcd34d;
+    background:rgba(252,211,77,.08);
+    border-radius:999px;
+    padding:4px 10px;
+    border:1px solid rgba(252,211,77,.35);
+    width:fit-content;
+  }
+  .live-dot{
+    width:8px;
+    height:8px;
+    border-radius:50%;
+    background:#ef4444;
+    box-shadow:0 0 10px rgba(239,68,68,.9);
+  }
+  .title-gradient{
+    background:linear-gradient(90deg,#f6c34c 0%,#cc6a2b 35%,#7a0f2b 100%);
+    -webkit-background-clip:text;
+    background-clip:text;
+    color:transparent;
+  }
+  .live-stage-pill{
+    display:inline-flex;
+    align-items:center;
+    gap:8px;
+    font-size:13px;
+    color:var(--muted);
+  }
+  .live-stage-pill span{
+    padding:4px 10px;
+    border-radius:999px;
+    border:1px solid #262636;
+    background:#0d0d14;
+    font-size:12px;
+  }
 
-    .live-layout{display:grid;grid-template-columns:1fr;gap:18px;}
-    @media (min-width:980px){.live-layout{grid-template-columns:2fr 1.25fr;}}
+  .bf-toggle{
+    display:flex;
+    gap:10px;
+    align-items:center;
+    flex-wrap:wrap;
+    margin-top:10px;
+  }
+  .bf-toggle .btn{
+    padding:8px 12px;
+    border-radius:14px;
+    font-size:13px;
+  }
 
-    .live-zones-grid{display:grid;grid-template-columns:repeat(3,1fr);gap:12px;}
-    @media (max-width:980px){.live-zones-grid{grid-template-columns:1fr;}}
-
-    .live-zone-title{display:flex;align-items:center;justify-content:space-between;margin-bottom:6px;}
-    .live-zone-title span.badge{font-size:11px;padding:3px 8px;}
-
-    .table-sm{font-size:11.5px;line-height:1.2;}
-    .table-sm th,.table-sm td{padding:4px 6px;white-space:nowrap;}
-    .table-sm td.team-col{max-width:170px;white-space:normal;}
-
-    .live-note{font-size:11px;color:var(--muted);margin-top:6px;}
-
-    .bf-toggle{display:flex;gap:10px;align-items:center;flex-wrap:wrap;margin-top:10px;}
-    .bf-toggle .btn{padding:8px 11px;border-radius:12px;font-size:13px;}
-
-    /* BigFish Total */
-    .bf-wrap{display:none;margin-top:15px;}
-    .bf-wrap.is-open{display:block;}
-
-    .pill{
-      display:inline-flex;align-items:center;gap:8px;
-      padding:6px 10px;border-radius:999px;
-      border:1px solid rgba(148,163,184,.25);
-      background:rgba(2,6,23,.35);
-      color:#cbd5e1;font-size:12px;
+  /* ===== Макет ===== */
+  .live-layout{
+    display:grid;
+    grid-template-columns:1fr;
+    gap:18px;
+  }
+  @media (min-width:980px){
+    .live-layout{
+      grid-template-columns:2fr 1.25fr;
     }
-    .bigfish-row--max{background:rgba(250,204,21,0.08);}
+  }
+
+  /* ===== Таблиці (базово, як було) ===== */
+  .table-sm{
+    font-size:11.5px;
+    line-height:1.25;
+  }
+  .table-sm th,
+  .table-sm td{
+    padding:4px 6px;
+    white-space:nowrap;
+  }
+  .table-sm td.team-col{
+    max-width:180px;
+    white-space:normal;
+  }
+
+  .table-wrap{
+    overflow-x:auto;
+    max-width:100%;
+  }
+
+  .live-note{
+    font-size:11.5px;
+    color:var(--muted);
+    margin-top:6px;
+  }
+
+  /* ===== Зони A / B / C ===== */
+  .live-zones-grid{
+    display:grid;
+    grid-template-columns:repeat(3,1fr);
+    gap:12px;
+  }
+  @media (max-width:980px){
+    .live-zones-grid{
+      grid-template-columns:1fr;
+    }
+  }
+
+  .live-zone.card{
+    padding:10px 10px 8px;
+  }
+  .live-zone-title{
+    display:flex;
+    align-items:center;
+    justify-content:space-between;
+    margin-bottom:6px;
+  }
+  .live-zone-title .badge{
+    font-size:11px;
+    padding:3px 8px;
+  }
+
+  /* --- компактні таблиці саме для зон --- */
+  .live-zone .table-sm{
+    font-size:11px;
+  }
+  .live-zone .table-sm th,
+  .live-zone .table-sm td{
+    padding:3px 4px;
+  }
+
+  /* Зона (A4, B5...) вузька */
+  .live-zone .table-sm th:nth-child(1),
+  .live-zone .table-sm td:nth-child(1){
+    width:38px;
+    text-align:center;
+  }
+
+  /* Команда тримаємо, але теж без зайвого повітря */
+  .live-zone .table-sm th:nth-child(2),
+  .live-zone .table-sm td:nth-child(2){
+    max-width:110px;
+  }
+
+  /* всі числа по центру */
+  .live-zone .table-sm td:nth-child(n+3){
+    text-align:center;
+  }
+
+  /* ===== BigFish Total: тільки helper-и, сама табличка вже ок ===== */
+  .bf-wrap{margin-top:10px;}
+  .pill{
+    display:inline-flex;
+    align-items:center;
+    gap:8px;
+    padding:6px 10px;
+    border-radius:999px;
+    border:1px solid rgba(148,163,184,.25);
+    background:rgba(2,6,23,.35);
+    color:#cbd5e1;
+    font-size:12px;
+  }
+  .bigfish-row--max{
+    background:rgba(250,204,21,0.08);
+  }
+
+  /* ===== Зважування по етапу ===== */
+  .weigh-toggle{
+    display:flex;
+    gap:8px;
+    flex-wrap:wrap;
+    margin-bottom:10px;
+  }
+  .weigh-toggle .btn{
+    padding:6px 10px;
+    border-radius:999px;
+    font-size:13px;
+  }
+
+  /* Таблиця зважувань — ще компактніше */
+  #weighTable{
+    font-size:11px;
+    border-collapse:collapse;
+  }
+  #weighTable th,
+  #weighTable td{
+    padding:3px 4px;
+    white-space:nowrap;
+  }
+
+  /* Зона (A1/B5/С2) */
+  #weighTable th:nth-child(1),
+  #weighTable td:nth-child(1){
+    width:40px;
+    text-align:center;
+  }
+
+  /* Команда */
+  #weighTable th:nth-child(2),
+  #weighTable td:nth-child(2){
+    max-width:110px;
+  }
+
+  /* Рибки – всі цифри по центру */
+  #weighTable th:nth-child(n+3),
+  #weighTable td:nth-child(n+3){
+    text-align:center;
+  }
+
+  /* ===== Щоб сторінка НЕ скролилась горизонтально ===== */
+  body{
+    overflow-x:hidden;
+  }
   </style>
 </head>
 
